--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,6 +59,6 @@
       <div id="results" class="row"></div>
     </div>
 
-    <script src="/javascripts/index.js"></script>
+    <script src="/javascripts/client.js"></script>
   </body>
 </html>
