added route attributes

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -59,6 +59,13 @@
              <input type="text" id="routeName"> Name of Route</input>
              <br>
              <br>
+             <input type="radio" name="routeType" value="planned"> planned</input>
+             <input type="radio" name="routeType" value="completed"> completed</input>
+             <br>
+             <br>
+             <input type="text" id="routeUsername"> Username</input>
+             <br>
+             <br>
              <input type="text" id="routeDate"> Time</input>
              <br>
              <br>
