--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -52,6 +52,8 @@
           <tr>
             <th>#</th>
             <th>Name</th>
+            <th>Type</th>
+            <th>Username</th>
             <th>Date</th>
             <th>Description</th>
             <th>Delete</th>
