--- a/views/update.ejs
+++ b/views/update.ejs
@@ -52,6 +52,8 @@
           <tr>
             <th>#</th>
             <th>Name</th>
+            <th>Type</th>
+            <th>Username</th>
             <th>Date</th>
             <th>Description</th>
             <th>Edit</th>
@@ -68,6 +70,8 @@
         <thead>
           <tr>
             <th>new Name</th>
+            <th>Type</th>
+            <th>Username</th>
             <th>new Date</th>
             <th>new Description</th>
             <th>Submit</th>
