--- a/views/author.ejs
+++ b/views/author.ejs
@@ -15,11 +15,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/project.css">
+
   </head>
 
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -28,7 +30,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          <a class="navbar-brand" href="/">Assignment 7</a>
+            <a class="navbar-brand" href="/">Summer Project</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -36,19 +38,34 @@
             <li><a href="/create">Create Route</a></li>
             <li><a href="/update">Update Route</a></li>
             <li><a href="/delete">Delete Route</a></li>
-            <li><a href="/polygon">Polygon</a></li>
-            <li><a href="/network">Network Analysis</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="/author">Jonathan Bahlmann</a></li>
-          </ul>
+            <form class="form-inline mt-2 mt-md-0">
+                       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                     </form>
+                    </ul>
         </div>
       </div>
     </nav>
 
+
     <div class="container-fluid">
-      <h4>Assignment 7</h4>
-      by Jonathan Bahlmann // 453 524
+      <h4>Summerproject</h4>
+      by Jonathan Bahlmann // 453 524 <a href="jbahlmann@uni-muenster.de">jbahlmann@uni-muenster.de</a>
+      <br>
+      and Benjamin Rieke // 408 743 <a href="b_riek01@uni-muenster.de">b_riek01@uni-muenster.de</a>
+    </div>
+
+    <!-- footer -->
+
+    <div id="footer">
+        <div class="container">
+
+                <div class="row">
+                <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
+            </div>
+        </div>
     </div>
 
   </body>
