--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,11 +15,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/project.css">
+
   </head>
 
   <body onload="readRoutes();">
     <!-- navbar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -28,7 +30,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          <a class="navbar-brand" href="#">Assignment 7</a>
+            <a class="navbar-brand" href="/">Summer Project</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -36,27 +38,44 @@
             <li><a href="/create">Create Route</a></li>
             <li><a href="/update">Update Route</a></li>
             <li><a href="/delete">Delete Route</a></li>
-            <li><a href="/polygon">Polygon</a></li>
-            <li><a href="/network">Network Analysis</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="author">Jonathan Bahlmann</a></li>
-          </ul>
+            <form class="form-inline mt-2 mt-md-0">
+                       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                     </form>
+                    </ul>
         </div>
       </div>
     </nav>
-    <p class="bg-info">This is a solution that probably has scambled route selection, but includes features as weather service etc.
-    There is a solution with better route selection but without API calls. It is /public/javascripts/client.js and you can simply include it by changing the included script in index.ejs.</p>
 
-    <div class="container-fluid">
-      <div id="mapdiv" style="width: 100%; height: 500px;" ;></div>
-    </div>
+
+
 
     <div class="container-fluid">
       <h4>Route selection</h4>
     </div>
     <div class="container-fluid">
       <div id="results" class="row"></div>
+    </div>
+
+
+
+
+
+    <div class="container-fluid">
+      <div id="mapdiv"></div>
+    </div>
+
+    <!-- footer -->
+
+    <div id="footer">
+        <div class="container">
+
+                <div class="row">
+                <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
+            </div>
+        </div>
     </div>
 
     <script src="/javascripts/client.js"></script>
