--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,8 +49,9 @@
       </div>
     </nav>
 
-
-
+    <div class="container-fluid">
+      <div id="mapdiv" style="width: 100%; height: 500px;" ;></div>
+    </div>
 
     <div class="container-fluid">
       <h4>Route selection</h4>
@@ -59,13 +60,7 @@
       <div id="results" class="row"></div>
     </div>
 
-
-
-
-
-    <div class="container-fluid">
-      <div id="mapdiv"></div>
-    </div>
+    <script src="/javascripts/client.js"></script>
 
     <!-- footer -->
 
