--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,11 +53,39 @@
       <div id="mapdiv" style="width: 100%; height: 500px;" ;></div>
     </div>
 
-    <div class="container-fluid">
+<!--    <div class="container-fluid">
       <h4>Route selection</h4>
     </div>
     <div class="container-fluid">
       <div id="results" class="row"></div>
+    </div> -->
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4">
+          <h4>Route selection</h4>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Username</th>
+                <th>Date</th>
+              </tr>
+            </thead>
+            <tbody id="resultTable">
+
+            </tbody>
+          </table>
+        </div>
+        <div class="col-sm-4">
+          <h4>Animal tracks?</h4>
+        </div>
+        <div class="col-sm-4">
+          <h4>Meeting Points</h4>
+        </div>
+      </div>
     </div>
 
     <script src="/javascripts/client.js"></script>
