--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -78,8 +78,8 @@
         </div>
       </div>
     </div>
-    <input type="text" id="idInput">idInput</input>
-    <input type="text" id="individualInput">individualInput</input>
+    <input type="text" id="idInput">idInput__11017705</input>
+    <input type="text" id="individualInput">individualInput__41722A</input>
     <textarea type="text" id="JSONresponse"></textarea>
 
     <!-- footer -->
@@ -95,7 +95,6 @@
 
 
     <script src="/javascripts/animals.js"></script>
-    <script src="/javascripts\leaflet-routing-machine-3.2.12\dist\leaflet-routing-machine.js"></script>
 
   </body>
 </html>
