readRoutes() was called twice in index.ejs, now fixed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 
   </head>
 
-  <body onload="readRoutes();">
+  <body>
     <!-- navbar -->
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
