--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,15 +91,9 @@
     <script src="/javascripts/client.js"></script>
 
     <!-- footer -->
-
-    <div id="footer">
-        <div class="container">
-
-                <div class="row">
-                <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
-            </div>
-        </div>
-    </div>
+    <footer class="page-footer font-small">
+        <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
+    </footer>
 
     <script src="/javascripts/client.js"></script>
   </body>
