changed frontpage order

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,16 +79,17 @@
           </table>
         </div>
         <div class="col-sm-4">
-          <h4>Animal tracks?</h4>
-        </div>
-        <div class="col-sm-4">
-          <h4>Meeting Points</h4>
+          <h4>Meeting Func</h4>
           <textarea type="text" id="outputRoute1"></textarea>
           <textarea type="text" id="outputRoute2"></textarea>
 
            <button class="btn btn-outline-success my-2 my-sm-0" onclick="lineStringsIntersect()">Check for meetings</button>
 
         </div>
+        <div class="col-sm-4">
+          <h4>Meeting Points</h4>
+        </div>
+
       </div>
     </div>
 
