--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -6,17 +6,11 @@
 
     <title><%= title %></title>
 
-    <!-- include osm -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
-
     <!-- include bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/project.css">
-
-    <link rel="stylesheet" href="/javascripts\leaflet-routing-machine-3.2.12\dist\leaflet-routing-machine.css" />
 
 
   </head>
@@ -37,7 +31,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="/">Start</a></li>
-            <li class="active"><a href="/create">Create Route</a></li>
+            <li><a href="/create">Create Route</a></li>
+            <li class="active"><a href="/animals">Animal Routes</a></li>
             <li><a href="/update">Update Route</a></li>
             <li><a href="/delete">Delete Route</a></li>
           </ul>
@@ -83,15 +78,9 @@
     <textarea type="text" id="JSONresponse"></textarea>
 
     <!-- footer -->
-
-    <div id="footer">
-        <div class="container">
-
-                <div class="row">
-                <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
-            </div>
-        </div>
-    </div>
+    <footer class="page-footer font-small">
+        <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
+    </footer>
 
 
     <script src="/javascripts/animals.js"></script>
