--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -6,10 +6,6 @@
 
     <title><%= title %></title>
 
-    <!-- include osm -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
-
     <!-- include bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -35,6 +31,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Start</a></li>
             <li><a href="/create">Create Route</a></li>
+            <li><a href="/animals">Animal Routes</a></li>
             <li><a href="/update">Update Route</a></li>
             <li class="active"><a href="/delete">Delete Route</a></li>
           </ul>
@@ -69,15 +66,9 @@
     </div>
 
     <!-- footer -->
-
-    <div id="footer">
-        <div class="container">
-
-                <div class="row">
-                <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
-            </div>
-        </div>
-    </div>
+    <footer class="page-footer font-small">
+        <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
+    </footer>
 
 
     <script src="/javascripts/delete.js"></script>
