--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -52,7 +52,7 @@
              <input type="text" id="routeDesc"> Description</input>
            </form>
            <br><br>
-           <button type="button" onclick="buttonAddAnimal()">create Route</button>
+           <button type="button" class="btn btn-secondary" onclick="buttonAddAnimal()">create Route</button>
         </div>
       </div>
     </div>
