--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
           <textarea type="text" id="outputRoute1"></textarea>
           <textarea type="text" id="outputRoute2"></textarea>
 
-           <button class="btn btn-outline-success my-2 my-sm-0" onclick="lineStringsIntersect()">Check for meetings</button>
+           <button type="button" class="btn btn-secondary" onclick="lineStringsIntersect()">Check for meetings</button>
 
         </div>
         <div class="col-sm-4">
