--- a/views/create.ejs
+++ b/views/create.ejs
@@ -59,7 +59,7 @@
              <input type="text" id="routeDesc"> Description</input>
            </form>
            <br><br>
-           <button type="button" onclick="createRouteButton()">create Route</button>
+           <button type="button" class="btn btn-secondary" onclick="createRouteButton()">create Route</button>
         </div>
       </div>
     </div>
