--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,6 +87,8 @@
           <textarea type="text" id="outputRoute2"></textarea>
 
            <button class="btn btn-outline-success my-2 my-sm-0" onclick="lineStringsIntersect()">Check for meetings</button>
+           <textarea type="text" id="JSONresponse"></textarea>
+
 
         </div>
       </div>
