meeting point calc now evals all routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,11 +57,9 @@
         </div>
         <div class="col-sm-4">
           <h4>Meeting Func</h4>
-          <textarea type="text" id="outputRoute1"></textarea>
-          <textarea type="text" id="outputRoute2"></textarea>
+          <textarea type="text" id="routeInQuestion"></textarea>
 
-           <button type="button" class="btn btn-secondary" onclick="lineStringsIntersect()">Check for meetings</button>
-           <textarea type="text" id="JSONresponse"></textarea>
+           <button type="button" class="btn btn-secondary" onclick="getAllRoutes()">Check for meetings</button>
 
 
         </div>
