Markers now work perfectly and functionality to the animalsite was added

--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -29,7 +29,7 @@
       </div>
     </nav>
 
-
+<br>
     <div class="container-fluid">
        <div class="row">
          <div class="col-sm-6">
@@ -52,6 +52,7 @@
              <input type="text" id="routeDesc"> Description</input>
            </form>
            <br><br>
+             <button type="button" class="btn btn-secondary" onclick="loadStudy()">Get Study Data</button>
            <button type="button" class="btn btn-secondary" onclick="buttonAddAnimal()">create Route</button>
         </div>
       </div>
