Fixed the L.routing problem. Added sensor choice and table for studies

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="leaflet/leaflet.css"/>
     <script src="leaflet/leaflet.js"></script>
+    <link rel="stylesheet" href="/javascripts\leaflet-routing-machine-3.2.12\dist\leaflet-routing-machine.css"/>
+    <script src="/javascripts\leaflet-routing-machine-3.2.12\dist\leaflet-routing-machine.js"></script>
+    <script src="/javascripts\leaflet-routing-machine-3.2.12\dist\leaflet-routing-machine.min.js"></script>
 
 
   </head>
@@ -32,7 +35,7 @@
       </div>
     </nav>
 
-
+<br>
     <div class="container-fluid">
        <div class="row">
          <div class="col-sm-6">
@@ -59,7 +62,7 @@
              <input type="text" id="routeDesc"> Description</input>
            </form>
            <br><br>
-           <button type="button" class="btn btn-secondary" onclick="createRouteButton()">create Route</button>
+           <button type="button" class="btn btn-secondary" onclick="createRouteButton()">Create Route</button>
         </div>
       </div>
     </div>
@@ -74,8 +77,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 
     <script src="/javascripts/create.js"></script>
-    <script src="/javascripts\leaflet-routing-machine-3.2.12\dist\leaflet-routing-machine.js"></script>
-    
+
 
   </body>
 </html>
