--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -51,16 +51,66 @@
              <br>
              <input type="text" id="routeDesc"> Description</input>
            </form>
+
            <br><br>
-             <button type="button" class="btn btn-secondary" onclick="loadStudy()">Get Study Data</button>
-           <button type="button" class="btn btn-secondary" onclick="buttonAddAnimal()">create Route</button>
+  <button type="button" class="btn btn-secondary" id="load"data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>" onclick="loadStudy()">Get Study Data</button>
+           <button type="button" class="btn btn-secondary" onclick="buttonAddAnimal()">Create Route</button>
+
+           <form id="sensorType">
+           <input type="radio" name="sensorType" value="gps" checked> GPS</input>
+           <input type="radio" name="sensorType" value="radio-transmitter"> Radio-Transmitter</input>
+            </form>
+
+
+        </div>
+        <div class="col-sm-6">
+<b>Possible studies and a selection of animals</b>
+<table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Nr</th>
+      <th scope="col">Study Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Species</th>
+      <th scope="col">Animal Id</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+      <td>@mdo</td>
+
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+      <td>@mdo</td>
+
+    </tr>
+  </tbody>
+</table>
         </div>
       </div>
     </div>
-    <input type="text" id="idInput">idInput__11017705</input>
-    <input type="text" id="individualInput">individualInput__41722A</input>
+    <input type="text" id="idInput" placeholder="Study Id"> --11017705-- </input>
+    <input type="text" id="individualInput"placeholder="Animal Id"> --41722A-- </input>
     <textarea type="text" id="JSONresponse"></textarea>
 
+    <div class="col-sm">
+      One of three columns
+    </div>
     <!-- footer -->
     <footer class="page-footer font-small">
         <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
