Fixed the meetingpoint selection table by flushing the responsible array

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
               <tr>
                 <th>Check</th>
                 <th>Name</th>
-                <th><select class="selectpicker" size="1">
+                <th><select id="routesSelect" class="selectpicker" size="1">
   <option selected>Type</option>
   <option value="planned">planned</option>
   <option value="completed">completed</option>
@@ -95,7 +95,13 @@
               <tr>
                 <th>Number</th>
                 <th>Created by</th>
-                <th>Encounterd</th>
+                <th><select id="pointSelect" class="selectpicker" size="1">
+  <option selected>Encounters</option>
+  <option value="completed">Here you have met</option>
+  <option value="planned">Here you might meet</option>
+    <option value="animal">If you are an animal</option>
+
+</selectpicker></th>
                 <th>Created</th>
                 <th>Zoom to</th>
                 <th>Delete</th>
