The Meetingpoints of the database now also show the original markertext

--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -64,7 +64,12 @@
 
         </div>
         <div class="col-sm-6">
-<b>Possible studies and a selection of animals</b>
+<b>Possible studies and a selection of animals. For further studys check:
+<br>
+  <a href =https://www.movebank.org/> https://www.movebank.org/</a></b>
+<br>
+<b>You can also create your needed account right there!</b>
+
 <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -78,17 +83,17 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td>@mdo</td>
+      <td>01</td>
+      <td>672882373</td>
+      <td>Milvus milvus(Red kite)</td>
+      <td>337</td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-      <td>@mdo</td>
+      <td>02</td>
+      <td>11017705</td>
+      <td>Anas platyrhynchos(Duck)</td>
+      <td>41722A</td>
 
     </tr>
     <tr>
