--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title><%= title %></title>
+    <title>Summerproject</title>
 
     <link rel="stylesheet" type="text/css" href="css/project.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -62,10 +62,10 @@
           </table>
         </div>
         <div class="col-sm-4">
-          <h4 id="p1">Your chosen route: </h4>
+          <h4 id="p1">Please choose your route</h4>
 
           <textarea type="text" style="display:none" id="routeInQuestion"></textarea>
-          
+
 
            <button type="button" class="btn btn-secondary" onclick="getAllRoutes()">Check for meetings</button>
            <div class="col-sm-4">
