Small visual changes

--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -106,13 +106,9 @@
         </div>
       </div>
     </div>
-    <input type="text" id="idInput" placeholder="Study Id"> --11017705-- </input>
-    <input type="text" id="individualInput"placeholder="Animal Id"> --41722A-- </input>
-    <textarea type="text" id="JSONresponse"></textarea>
+    <input type="text" id="idInput" placeholder="Study Id"></input>
+    <input type="text" id="individualInput"placeholder="Animal Id"></input>
 
-    <div class="col-sm">
-      One of three columns
-    </div>
     <!-- footer -->
     <footer class="page-footer font-small">
         <p><center><a href="/author">Author Contacts</a> <p class="footertext">© 2019</p></center></p>
