--- a/views/update.ejs
+++ b/views/update.ejs
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <link rel="stylesheet" type="text/css" href="css/project.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -53,11 +52,11 @@
       <table class="table table-striped">
         <thead>
           <tr>
-            <th>new Name</th>
-            <th>new Type</th>
+            <th>New Name</th>
+            <th>New Type</th>
             <th>Username</th>
-            <th>new Date</th>
-            <th>new Description</th>
+            <th>New Date</th>
+            <th>New Description</th>
             <th>Submit</th>
           </tr>
         </thead>
